--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,7 +118,7 @@ h6 {
 }
 
 .section-aban {
-  background: url('/assets/img/vehicle-road.jpg') center/cover no-repeat;
+  background: url('assets/img/vehicle-road.jpg') center/cover no-repeat;
   position: relative;
   padding: 100px 0; /* Ajusta el espacio dentro de la sección */
 }
