--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,7 +165,7 @@ h6 {
   position: relative; /* Para que el ::before se posicione relativo a este elemento */
   text-align: center;
   padding: 50px 20px;
-  background: url('/assets/img/truck.jpg') center/cover no-repeat;
+  background: url('assets/img/truck.jpg') center/cover no-repeat;
   color: white;
   overflow: hidden; /* Evita que ::before sobresalga */
 }
